--- a/TrackEditor/DebugChunkData.ui
+++ b/TrackEditor/DebugChunkData.ui
@@ -391,12 +391,12 @@
          <item row="10" column="1">
           <widget class="QLabel" name="label_28">
            <property name="text">
-            <string>AI accuracy</string>
+            <string>Ground height</string>
            </property>
           </widget>
          </item>
          <item row="11" column="1">
-          <widget class="QLineEdit" name="leAIAccuracy">
+          <widget class="QLineEdit" name="leGroundHeight">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1334,7 +1334,8 @@ wall horiz offset</string>
          <item row="9" column="2">
           <widget class="QLabel" name="label_74">
            <property name="text">
-            <string>unknown 39</string>
+            <string>Subdivide distance
+(right shoulder)</string>
            </property>
           </widget>
          </item>
@@ -1351,12 +1352,13 @@ wall horiz offset</string>
          <item row="11" column="1">
           <widget class="QLabel" name="label_61">
            <property name="text">
-            <string>unknown 42</string>
+            <string>Subdivide distance
+(roof)</string>
            </property>
           </widget>
          </item>
          <item row="14" column="2">
-          <widget class="QLineEdit" name="leUnk47">
+          <widget class="QLineEdit" name="leRUOuterWallSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1368,7 +1370,8 @@ wall horiz offset</string>
          <item row="7" column="3">
           <widget class="QLabel" name="label_79">
            <property name="text">
-            <string>Draw Order 3</string>
+            <string>Near chunks
+(forward extra)</string>
            </property>
           </widget>
          </item>
@@ -1399,12 +1402,13 @@ wall height</string>
          <item row="15" column="1">
           <widget class="QLabel" name="label_80">
            <property name="text">
-            <string>unknown 50</string>
+            <string>Near chunks
+(backward extra)</string>
            </property>
           </widget>
          </item>
          <item row="12" column="2">
-          <widget class="QLineEdit" name="leUnk43">
+          <widget class="QLineEdit" name="leLUOuterWallSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1416,7 +1420,8 @@ wall height</string>
          <item row="13" column="0">
           <widget class="QLabel" name="label_67">
            <property name="text">
-            <string>unknown 45</string>
+            <string>Subdivide distance
+(outer floor)</string>
            </property>
           </widget>
          </item>
@@ -1431,12 +1436,13 @@ wall horiz offset</string>
          <item row="15" column="0">
           <widget class="QLabel" name="label_57">
            <property name="text">
-            <string>unknown 49</string>
+            <string>Near chunks
+(backward extra start)</string>
            </property>
           </widget>
          </item>
          <item row="8" column="2">
-          <widget class="QLineEdit" name="leDrawOrder2">
+          <widget class="QLineEdit" name="leNearForwardExStart">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1454,7 +1460,7 @@ wall horiz offset</string>
           </widget>
          </item>
          <item row="16" column="1">
-          <widget class="QLineEdit" name="leUnk50">
+          <widget class="QLineEdit" name="leNearBackwardEx">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1464,7 +1470,7 @@ wall horiz offset</string>
           </widget>
          </item>
          <item row="10" column="1">
-          <widget class="QLineEdit" name="leUnk38">
+          <widget class="QLineEdit" name="leCenterSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1494,7 +1500,7 @@ wall horiz offset</string>
           </widget>
          </item>
          <item row="8" column="3">
-          <widget class="QLineEdit" name="leDrawOrder3">
+          <widget class="QLineEdit" name="leNearForwardEx">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1504,7 +1510,7 @@ wall horiz offset</string>
           </widget>
          </item>
          <item row="14" column="1">
-          <widget class="QLineEdit" name="leUnk46">
+          <widget class="QLineEdit" name="leRLOuterWallSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1526,7 +1532,8 @@ wall horiz offset</string>
          <item row="9" column="1">
           <widget class="QLabel" name="label_81">
            <property name="text">
-            <string>unknown 38</string>
+            <string>Subdivide distance
+(center)</string>
            </property>
           </widget>
          </item>
@@ -1541,7 +1548,7 @@ wall horiz offset</string>
           </widget>
          </item>
          <item row="10" column="2">
-          <widget class="QLineEdit" name="leUnk39">
+          <widget class="QLineEdit" name="leRightSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1561,7 +1568,7 @@ wall horiz offset</string>
           </widget>
          </item>
          <item row="8" column="1">
-          <widget class="QLineEdit" name="leDrawOrder1">
+          <widget class="QLineEdit" name="leNearForward">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1573,7 +1580,8 @@ wall horiz offset</string>
          <item row="9" column="3">
           <widget class="QLabel" name="label_77">
            <property name="text">
-            <string>unknown 40</string>
+            <string>Subdivide distance
+(left wall)</string>
            </property>
           </widget>
          </item>
@@ -1599,7 +1607,7 @@ wall horiz offset</string>
           </widget>
          </item>
          <item row="12" column="0">
-          <widget class="QLineEdit" name="leUnk41">
+          <widget class="QLineEdit" name="leRWallSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1621,7 +1629,8 @@ wall horiz offset</string>
          <item row="7" column="1">
           <widget class="QLabel" name="label_56">
            <property name="text">
-            <string>Draw Order 1</string>
+            <string>Near chunks
+(forward)</string>
            </property>
           </widget>
          </item>
@@ -1634,7 +1643,7 @@ horiz offset</string>
           </widget>
          </item>
          <item row="12" column="3">
-          <widget class="QLineEdit" name="leUnk44">
+          <widget class="QLineEdit" name="leLLOuterWallSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1654,7 +1663,7 @@ horiz offset</string>
           </widget>
          </item>
          <item row="10" column="3">
-          <widget class="QLineEdit" name="leUnk40">
+          <widget class="QLineEdit" name="leLWallSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1664,7 +1673,7 @@ horiz offset</string>
           </widget>
          </item>
          <item row="14" column="0">
-          <widget class="QLineEdit" name="leUnk45">
+          <widget class="QLineEdit" name="leOuterFloorSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1674,7 +1683,7 @@ horiz offset</string>
           </widget>
          </item>
          <item row="14" column="3">
-          <widget class="QLineEdit" name="leUnk48">
+          <widget class="QLineEdit" name="leNearBackward">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1696,7 +1705,8 @@ horiz offset</string>
          <item row="13" column="2">
           <widget class="QLabel" name="label_71">
            <property name="text">
-            <string>unknown 47</string>
+            <string>Subdivide distance
+(right upper outer wall)</string>
            </property>
           </widget>
          </item>
@@ -1711,14 +1721,16 @@ wall height</string>
          <item row="9" column="0">
           <widget class="QLabel" name="label_73">
            <property name="text">
-            <string>unknown 37</string>
+            <string>Subdivide distance
+(left shoulder)</string>
            </property>
           </widget>
          </item>
          <item row="13" column="3">
           <widget class="QLabel" name="label_64">
            <property name="text">
-            <string>unknown 48</string>
+            <string>Near chunks
+(backward)</string>
            </property>
           </widget>
          </item>
@@ -1741,21 +1753,24 @@ wall height</string>
          <item row="7" column="2">
           <widget class="QLabel" name="label_70">
            <property name="text">
-            <string>Draw Order 2</string>
+            <string>Near chunks
+(forward extra start)</string>
            </property>
           </widget>
          </item>
          <item row="11" column="0">
           <widget class="QLabel" name="label_66">
            <property name="text">
-            <string>unknown 41</string>
+            <string>Subdivide distance
+(right wall)</string>
            </property>
           </widget>
          </item>
          <item row="11" column="2">
           <widget class="QLabel" name="label_60">
            <property name="text">
-            <string>unknown 43</string>
+            <string>Subdivide distance
+(left upper outer wall)</string>
            </property>
           </widget>
          </item>
@@ -1772,7 +1787,8 @@ wall height</string>
          <item row="13" column="1">
           <widget class="QLabel" name="label_78">
            <property name="text">
-            <string>unknown 46</string>
+            <string>Subdivide distance
+(right lower outer wall)</string>
            </property>
           </widget>
          </item>
@@ -1797,7 +1813,7 @@ wall height</string>
           </widget>
          </item>
          <item row="12" column="1">
-          <widget class="QLineEdit" name="leUnk42">
+          <widget class="QLineEdit" name="leRoofSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1807,7 +1823,7 @@ wall height</string>
           </widget>
          </item>
          <item row="16" column="0">
-          <widget class="QLineEdit" name="leUnk49">
+          <widget class="QLineEdit" name="leNearBackwardExStart">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1825,7 +1841,7 @@ height</string>
           </widget>
          </item>
          <item row="10" column="0">
-          <widget class="QLineEdit" name="leUnk37">
+          <widget class="QLineEdit" name="leLeftSubdivDist">
            <property name="enabled">
             <bool>false</bool>
            </property>
@@ -1837,7 +1853,8 @@ height</string>
          <item row="11" column="3">
           <widget class="QLabel" name="label_53">
            <property name="text">
-            <string>unknown 44</string>
+            <string>Subdivide distance
+(left lower outer wall)</string>
            </property>
           </widget>
          </item>
