--- a/TrackEditor/EditGeometryWidget.ui
+++ b/TrackEditor/EditGeometryWidget.ui
@@ -1604,12 +1604,12 @@
             <item row="3" column="0">
              <widget class="QLabel" name="label_13">
               <property name="text">
-               <string>Accuracy</string>
+               <string>Ground height</string>
               </property>
              </widget>
             </item>
             <item row="3" column="1">
-             <widget class="QSpinBox" name="sbAIAccuracy">
+             <widget class="QSpinBox" name="sbGroundHeight">
               <property name="minimum">
                <number>-65535</number>
               </property>
