--- a/TrackEditor/EditGeometryWidget.ui
+++ b/TrackEditor/EditGeometryWidget.ui
@@ -1292,6 +1292,26 @@
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
+           <widget class="QLabel" name="label_13">
+            <property name="text">
+             <string>Ground height</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="sbGroundHeight">
+            <property name="minimum">
+             <number>-65535</number>
+            </property>
+            <property name="maximum">
+             <number>65535</number>
+            </property>
+            <property name="singleStep">
+             <number>100</number>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -1598,26 +1618,6 @@
              <widget class="QLabel" name="label_44">
               <property name="text">
                <string>Line 2</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
-             <widget class="QLabel" name="label_13">
-              <property name="text">
-               <string>Ground height</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="1">
-             <widget class="QSpinBox" name="sbGroundHeight">
-              <property name="minimum">
-               <number>-65535</number>
-              </property>
-              <property name="maximum">
-               <number>65535</number>
-              </property>
-              <property name="singleStep">
-               <number>100</number>
               </property>
              </widget>
             </item>
