--- a/TrackEditor/DisplaySettings.ui
+++ b/TrackEditor/DisplaySettings.ui
@@ -654,10 +654,10 @@
          <item row="3" column="2">
           <widget class="QSpinBox" name="sbRefZ">
            <property name="minimum">
-            <number>-65535</number>
+            <number>-1000000</number>
            </property>
            <property name="maximum">
-            <number>65535</number>
+            <number>1000000</number>
            </property>
            <property name="singleStep">
             <number>100</number>
@@ -680,10 +680,10 @@
          <item row="3" column="0">
           <widget class="QSpinBox" name="sbRefX">
            <property name="minimum">
-            <number>-65535</number>
+            <number>-1000000</number>
            </property>
            <property name="maximum">
-            <number>65535</number>
+            <number>1000000</number>
            </property>
            <property name="singleStep">
             <number>100</number>
@@ -707,10 +707,10 @@
          <item row="3" column="1">
           <widget class="QSpinBox" name="sbRefY">
            <property name="minimum">
-            <number>-65535</number>
+            <number>-1000000</number>
            </property>
            <property name="maximum">
-            <number>65535</number>
+            <number>1000000</number>
            </property>
            <property name="singleStep">
             <number>100</number>
